--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@ function toggleDescription(id) {
       </div>
     </div>
 
-    <form action="https://formspree.io/f/mgvypapo" method="POST" class="space-y-6 text-left">
+  <form id="contact-form" action="https://formspree.io/f/mgvypapo" method="POST" class="space-y-6 text-left">
+
   <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
   <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
   <input name="subject" type="text" placeholder="Subject" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
@@ -311,7 +312,7 @@ function toggleDescription(id) {
 
 <!-- Thank You Message -->
 <div id="thank-you-message" class="hidden text-green-400 mt-4 text-lg">
-  Thank you! We’ve received your message.
+  ✅ Thank you! We’ve received your message.
 </div>
 
 </section>
